# tftpsrv

./: .gitignore  CMakeLists.txt
app/: CMakeLists.txt  main.cpp
app/src/: TFTPProtocol.cpp  TFTPProtocol.h  TFTPServer.cpp  TFTPServer.h  Utilities.hpp
